<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

    <TextView
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:text="@string/text_config"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_height="wrap_content">

    </TextView>

    <TextView
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:text="@string/text_seleccionar_genero"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_height="wrap_content">

    </TextView>

    <LinearLayout

        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/ll_male"
            android:background="@color/colorPrimary_selected"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

    <ImageView

        android:id="@+id/imageView_male"
        android:layout_gravity="center"
        android:layout_width="100dp"
        android:layout_margin="10dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/nidoran_male" />

            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:text="@string/text_macho"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_female"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView_female"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/nidora_female" />

            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:text="@string/text_hembra"
                android:gravity="center"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:layout_height="match_parent" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/shinny" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:checked="true"
            android:text="@string/text_activar_shinny"
            android:layout_height="wrap_content" />



    </LinearLayout>

    <TextView
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:text="@string/text_probabilidad"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_height="wrap_content">

    </TextView>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:maxHeight="2dip"
        android:minHeight="2dip"
        android:progress="90">

    </SeekBar>

            <Button
                android:layout_margin="10dp"
                android:text="@string/button_guardar_cambios"
                android:layout_width="match_parent"
                android:id="@+id/button_save"
                android:layout_height="wrap_content" />

<!-- https://stackoverflow.com/questions/32212259/android-how-to-change-default-seekbar-thickness/39989135#39989135 -->
        </LinearLayout>
    </ScrollView>

</LinearLayout>